# scannerV1

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
src/: logger.cpp  logger.h  main.cpp  scanner.cpp  scanner.h
test/: sample.txt  sample2.txt
